--- a/6.0.0/Dockerfile
+++ b/6.0.0/Dockerfile
@@ -1,4 +1,4 @@
 FROM ryanj/centos7-s2i-nodejs:6.0.0
 
 # Install app dependencies
-RUN npm -q install -g bower ember-cli
+RUN sudo npm -q install -g bower ember-cli
