--- a/6.0.0/Dockerfile
+++ b/6.0.0/Dockerfile
@@ -1,4 +1,10 @@
 FROM ryanj/centos7-s2i-nodejs:6.0.0
 
 # Install app dependencies
-RUN sudo npm install -g ember-cli bower
+USER root
+
+RUN npm install -g ember-cli bower
+
+USER 1001
+
+EXPOSE 4200
